name:                aframe-blueprint
version:             0.2.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:
            static/index.html

library
  exposed-modules:     Text.AFrame
                 ,     Text.AFrame.DSL
                 ,     Text.AFrame.WebPage
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && < 5.0
                 ,       text == 1.2.*
                 ,       taggy == 0.2.*
                 ,       blaze-markup >= 0.7 && < 0.9
                 ,       containers == 0.5.*
                 ,       unordered-containers == 0.2.*
  other-modules:      Paths_aframe_blueprint
  hs-source-dirs:      src
  default-language:    Haskell2010
  

executable aframe-blueprint-examples
  main-is:  Main.hs
  build-depends:         base >=4.8 && < 5.0
                 ,       aframe-blueprint == 0.2.0
  
  GHC-options: -threaded
  hs-source-dirs:      examples/src
  default-language:    Haskell2010

Test-Suite test-blueprint
  type:               exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:      base >= 4.8 && < 5.0
               ,      aframe-blueprint == 0.2.0

  hs-source-dirs:      examples/src
  default-language:    Haskell2010
     
